--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.3.0",
     "@astrojs/tailwind": "^6.0.2",
-    "astro": "^5.9.1"
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.6",
+    "astro": "^5.9.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   }
 }
