--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "start": "node server.cjs"
+    "start": "node dist/server/entry.mjs"
   },
   "dependencies": {
+    "@astrojs/node": "^9.2.2",
     "@astrojs/react": "^4.3.0",
     "@astrojs/tailwind": "^6.0.2",
     "@types/react": "^19.1.6",
