--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
     "express": "^5.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
+  },
+  "devDependencies": {
+    "prettier": "^3.6.0",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.6.13"
   }
 }
